# hekmatica

./: browser-use.md  main.py  pyproject.toml
.cursor/rules/: bamldocs.mdc  langgraphdocs.mdc
Hekmatica/: .env  README.md  agent.py  tools.py
Hekmatica/baml_client/: async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
Hekmatica/baml_src/: answer_question.baml  clarify_question.baml  clients.baml  critique_answer.baml  generate_subqueries.baml  plan_steps.baml  rank_results.baml
docs/: docs.md
mcpdoc/: config.yaml
tests/: test_agent.py  test_tools.py
